--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/usernameTV" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/myPostRV"
+        android:id="@+id/worldPostRV"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="8dp"
