--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Perfil" />
-    <item android:title="World" />
-    <item android:title="Chat" />
+    <item android:title="Perfil" android:id="@+id/profile" />
+    <item android:title="World" android:id="@+id/world" />
+    <item android:title="Chat" android:id="@+id/chat" />
 </menu>
